--- a/src/modules/navigator/CMakeLists.txt
+++ b/src/modules/navigator/CMakeLists.txt
@@ -44,6 +44,7 @@ px4_add_module(
 		loiter.cpp
 		rtl.cpp
 		rtl_direct.cpp
+		rtl_direct_mission_land.cpp
 		rtl_mission_fast.cpp
 		rtl_mission_fast_reverse.cpp
 		takeoff.cpp
