--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -205,6 +205,7 @@ set(msg_files
 	wheel_encoders.msg
 	wind.msg
 	yaw_estimator_status.msg
+	alg_setpoint.msg
 )
 
 if(NOT px4_constrained_flash_build)
